<resources>
    <string name="app_name">DicodingEvent</string>
    <string name="title_home">Upcoming</string>
    <string name="title_dashboard">Finished</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_fav">Favourite</string>
    <string name="deskripsi">Ini Image View</string>
    <string name="desc">Ini Text View</string>
    <string name="button_text">Menuju Link</string>
    <string name="icon">Ini Icon</string>
    <string name="title_setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>