<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dicodingevent.ui.upcoming.UpcomingEventFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_upcoming" >
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.example.dicodingevent.ui.finished.FinishedEventFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_finished" />

    <fragment
        android:id="@+id/navigation_fav"
        android:name="com.example.dicodingevent.ui.favorite.FavouriteFragment"
        android:label="@string/title_fav"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@id/navigation_setting"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting"
        android:name="com.example.dicodingevent.ui.setting.FragmentSetting"
        />

</navigation>