<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="413dp"
        android:layout_height="731dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/ivDetailImage"
            android:layout_width="410dp"
            android:layout_height="260dp"
            android:contentDescription="@string/deskripsi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <!-- Nama Acara -->
        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/desc"
            app:layout_constraintTop_toBottomOf="@id/ivDetailImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <!-- Penyelenggara Acara -->
        <TextView
            android:id="@+id/tvOwnerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            app:layout_constraintTop_toBottomOf="@id/tvEventName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <!-- Waktu Acara -->
        <TextView
            android:id="@+id/tvBeginTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvOwnerName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <!-- Sisa Kuota -->
        <TextView
            android:id="@+id/tvQuota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvBeginTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />
        <!-- Deskripsi Acara -->
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/desc"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvQuota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/btnAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>